--- a/api/.env
+++ b/api/.env
@@ -1,9 +1,9 @@
 SECRET_KEY = "clabeSecretaToken"
 
-DB_USER = "friber_emilio"
+DB_USER = "emilio"
 DB_PASSWORD = "191565emilio"
-DB_DATABASE = "friber_emilio"
-DB_HOST = "mysql-friber.alwaysdata.net"
+DB_DATABASE = "emilio"
+DB_HOST = "mysql-.alwaysdata.net"
 DB_PORT = "3306"
 
 HCAPTCHA_SECRET_KEY = "0x90DBb9530B54b3661c6510fE47E9FF027e260754"
